273 ==> 421043 - Faces Detection crashes digiKam.
274 ==> 427333 - Face detection crashes due to pure virtual method call in LoadingCache.
275 ==> 429307 - Crash with face detection under Windows.
276 ==> 427380 - Crashes when running face detection.
277 ==> 431907 - Authentication to Google fails with "This browser or app may not be secure".
278 ==> 431964 - Face tags are not read correctly on certain images with more than one Microsoft People Tags XMP metadata.
279 ==> 431831 - How much data gets sent to digikam.org for face recognition.
280 ==> 432066 - Preview does not update when changing the photo using the keyboard in geolocation editor.
281 ==> 432048 - XMP People/Face tags with no associated regions are ignored by digiKam (Person Shown, MWG Face name, MS People Tag).
282 ==> 432069 - Please add the map settings also to the menu.
283 ==> 424805 - digiKam crashes when opening preview of items from a specific album.
284 ==> 431775 - Compiling with ccache issue.
285 ==> 432074 - digiKam's appimage failed to launch on ArchLinux.
286 ==> 432312 - Detect Faces crashes when .xcf file encountered.
287 ==> 432428 - Quick search by image name in current album.
288 ==> 432522 - digiKam 7.2.0-b2 on macOS 11 with remote mysql - failed to update DB schema.
289 ==> 432494 - Advanced search album does not search subfolders nothing.
290 ==> 432568 - Provisional tags are not displayed until another change is made.
291 ==> 431354 - Inconsistent behavior when adding Tags/Keywords.
292 ==> 430922 - Crashes without notification.
293 ==> 431366 - Translation incomplete, conversion to DE not possible. Language selection is missing.
294 ==> 425404 - digikam crash when making a maintenance.
295 ==> 426733 - Renaming with tags in subtree fails.
296 ==> 428938 - Entire program closes unexpectedly.
297 ==> 430702 - Lost the UI while process is still working.
298 ==> 430921 - Cannot add Edit Metadata filter to toolbar DigiKam 7.1.0.
299 ==> 